--- a/static/signup.html
+++ b/static/signup.html
@@ -30,10 +30,9 @@
    </style>
 </head>
 <body>
-    <div id="return"><a href="/" class="link">Return Home</a></div></br>
+   </q><div id="return"><a href="/" class="link">Return Home</a></div></br>
    <h1 id="title">SIGN-UP</h1>
    <form method="post">
-      <input type="hidden" name="token" value="{{.}}">
       <input type="text" name="username" placeholder="username">
       <input type="text" name="password" placeholder="password">
       <input type="submit">
