--- a/static/chat.html
+++ b/static/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Chat Example</title>
+   <title>GoChat</title>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type= "text/javascript">
    </script>
    <script type="text/javascript">
